--- a/app/src/main/res/layout-land/fragment_game.xml
+++ b/app/src/main/res/layout-land/fragment_game.xml
@@ -12,16 +12,23 @@
         <TextView
             android:id="@+id/game_points"
             style="@style/plainText2"
+            android:layout_marginTop="10dp"
             android:text="@string/gamePoints"
             app:layout_constraintEnd_toEndOf="@+id/button_answer"
             app:layout_constraintStart_toStartOf="@+id/button_answer"
-            app:layout_constraintTop_toTopOf="@+id/game_rounds" />
+            app:layout_constraintTop_toTopOf="parent" />
+
+        <TextView
+            android:id="@+id/game_rounds"
+            style="@style/plainText2"
+            android:layout_marginEnd="50dp"
+            android:text="@string/gameRounds"
+            app:layout_constraintEnd_toStartOf="@+id/game_points"
+            app:layout_constraintTop_toTopOf="@+id/game_points" />
 
         <TextView
             android:id="@+id/game_time"
             style="@style/plainText2"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
             android:layout_marginStart="50dp"
             android:text="@string/gameTime"
             app:layout_constraintStart_toEndOf="@+id/game_points"
@@ -30,10 +37,9 @@
         <TextView
             android:id="@+id/game_question"
             style="@style/plainText2"
-            android:layout_width="wrap_content"
             android:layout_marginTop="30dp"
             android:layout_marginEnd="50dp"
-            android:gravity="end"
+            android:gravity="center_vertical|end"
             android:text="@string/gameQuestion"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -57,17 +63,6 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/game_question" />
-
-        <TextView
-            android:id="@+id/game_rounds"
-            style="@style/plainText2"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="100dp"
-            android:layout_marginEnd="50dp"
-            android:text="@string/gameRounds"
-            app:layout_constraintEnd_toStartOf="@+id/game_points"
-            app:layout_constraintTop_toTopOf="parent" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
