--- a/app/src/main/res/layout-land/fragment_rules.xml
+++ b/app/src/main/res/layout-land/fragment_rules.xml
@@ -14,7 +14,6 @@
             style="@style/headerText"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="50dp"
             android:text="@string/rules"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -22,12 +21,14 @@
 
         <TextView
             android:id="@+id/rules_text"
-            style="@style/plainText"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:gravity="center"
+            android:padding="20dp"
             android:text="@string/rulesText"
-            app:layout_constraintEnd_toEndOf="@+id/rules_header"
-            app:layout_constraintStart_toStartOf="@+id/rules_header"
+            android:textSize="20sp"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/rules_header" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
